# glue

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  HACKING  Makefile  README.md  README.org  bozon.agda-lib  bozon.cabal  bozon.opam  bozon.scm  default.nix  dune-project  flake.nix  glue.asd  guix.scm  hall.scm  info.rkt  load.lisp  manifest.scm  rust-toolchain.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 17pgk0jjimaga2l3q3r284l488nd7w9a-source  6pakgwxwz07gifgrzgckj6730qmk9k1g-source  a83c9w45027rymcjfgbdb34nslgs7raw-source  rj8qsmnqbg8bc1cxq8qs3s6yvphzmi7j-source
.github/workflows/: ci.yml
app/: Test.agda
app/Bozon/: AST.hs  Parser.hs
bozon/: LICENSE-APACHE  LICENSE-MIT  README.md  ast.rkt  core.rkt  info.rkt  parser.rkt
bozon/.github/workflows/: ci.yml
bozon/scribblings/: bozon.scrbl
crates/bozon-ast/: Cargo.toml
crates/bozon-ast/src/: lib.rs  sexp.rs
crates/bozon-cache/: Cargo.toml
crates/bozon-cache/src/: lib.rs
crates/bozon-compiler/: Cargo.toml
crates/bozon-context/: Cargo.toml
crates/bozon-errors/: Cargo.toml
crates/bozon-parser/: Cargo.toml
crates/bozon-parser/src/: lib.rs  sexp.rs
crates/bozon-queries/: Cargo.toml
crates/bozon-queries/src/: interner.rs  lib.rs  values.rs
crates/bozon-queries/src/groups/: language.rs  mod.rs  parser.rs  vfs.rs
crates/bozon-span/: Cargo.toml
crates/bozon-span/src/: lib.rs
doc/: bozon.texi
glue/: compiler.rkt  info.rkt  main.rkt
glue/scribblings/: glue.scrbl
scribblings/: Glue.scrbl
src/: ast.rs  ctx.rs  main.lisp  main.rs  parser.rs
src/queries/: mod.rs
tests/: main.lisp  memoization.scm
theorems/: Bozon.v  CTT.v  Fetches.v  dune
theories/: Test.agda
