[package]
name = "bozon-cache"
version = "0.1.0"
edition = "2021"
authors = ["Rémi <remimimimimi@protonmail.com>"]
description = "Caching library targeting compiler developement and incrementalized computations"
homepage = "https://github.com/remimimimimi/bozon/crates/bozon-cache"
repository = "https://github.com/remimimimimi/bozon.git"
readme = "README.md"

[features]
default = ["hashbrown", "serde"]

[dependencies]
hashbrown = { version = "0.12", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = "1"
