[package]
name = "bozon-errors"
version = "0.1.0"
edition = "2021"
authors = ["Rémi <remimimimimi@protonmail.com>"]
description = "Compiler erros description over miette"
homepage = "https://github.com/remimimimimi/bozon/crates/bozon-errors"
repository = "https://github.com/remimimimimi/bozon.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "4.3", features = ["fancy"] }
