[package]
name = "bozon-parser"
version = "0.1.0"
edition = "2021"
authors = ["Rémi <remimimimimi@protonmail.com>"]
description = "Bozon s-expression parser"
homepage = "https://github.com/remimimimimi/bozon/crates/bozon-errors"
repository = "https://github.com/remimimimimi/bozon.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bozon-ast = { path = "../bozon-ast" }
bozon-span = { path = "../bozon-span" }

chumsky = "0.8"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
