[package]
name = "bozon-parser"
version = "0.1.0"
edition = "2021"
authors = ["Rémi <remimimimimi@protonmail.com>"]
description = "Bozon s-expression parser"
homepage = "https://github.com/remimimimimi/bozon/crates/bozon-errors"
repository = "https://github.com/remimimimimi/bozon.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bozon-ast = { path = "../bozon-ast" }
bozon-span = { path = "../bozon-span" }
chumsky = { git = "https://github.com/remimimimimi/chumsky", rev = "990153a9e77cad8ad62b4e5c6c09318c9bd1226f" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
