[package]
name = "bozon-span"
version = "0.1.0"
edition = "2021"
authors = ["Rémi <remimimimimi@protonmail.com>"]
description = "Various spans used in bozon compilation queries"
homepage = "https://github.com/remimimimimi/bozon/crates/bozon-span"
repository = "https://github.com/remimimimimi/bozon.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
